Fix flyout z-index

--- a/assets/scss/flyout.scss
+++ b/assets/scss/flyout.scss
@@ -2,6 +2,7 @@
 	
 	position: fixed;
 	right: 0;
+	z-index: 998;
 	bottom: -9999px;
 	width: 60%;
 
